@@ -29,6 +29,10 @@ An enhanced node list has been introduced with options for sorting and filtering
 
 == Breaking changes
 
+=== Time series storage strategy
+The RrdTool strategy (MultithreadedJniRrdStrategy) is now the default strategy for time series data.
+The pure-java JRobin strategy is deprecated and will be removed in the next major release.
+
 === Passive Status Monitor
 The Passive Status Monitor previously used the time of the event's arrival as the timestamp of the status.
 As this is too imprecise for some use cases, the time field of the event is now also evaluated.
